// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Day should render correctly 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          style="padding: 0px;"
        >
          <div
            class="css-1xl9qi0-Day"
          >
            <div
              class="css-14ql548-Day"
            >
              3
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Day should render disabled correctly 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          style="padding: 0px;"
        >
          <div
            class="css-131xw46-Day"
          >
            <div
              class="css-xoge7q-Day"
            >
              3
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Day should render isFirst, isLast correctly 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          style="padding: 0px;"
        >
          <div
            class="css-m6kpno-Day"
          >
            <div
              class="css-14ql548-Day"
            >
              3
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Day should render isFirst, isLast correctly 2`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          style="padding: 0px;"
        >
          <div
            class="css-1dv36dp-Day"
          >
            <div
              class="css-14ql548-Day"
            >
              3
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
